objects/Benefit.object
<CustomObject>
    <fields>
        <fullName>API_Availability__c</fullName>
        <formula>TEXT( Availability__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_Availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_BedInventory__c</fullName>
        <formula>Text( BedInventory__c )</formula>
        <label>API_BedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CHBedInventory__c</fullName>
        <formula>TEXT(CHBedInventory__c)</formula>
        <label>API_CHBedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CHVetBedInventory__c</fullName>
        <formula>TEXT(CHVetBedInventory__c)</formula>
        <label>API_CHVetBedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CHYouthBedInventory__c</fullName>
        <formula>TEXT(CHYouthBedInventory__c)</formula>
        <label>API_CHYouthBedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_CoCCode__c</fullName>
        <formula>Text(CoCCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_CoCCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateDeleted__c</fullName>
        <formula>If(NOT(ISBLANK(DateDeleted__c)),

TEXT(YEAR(DATEVALUE( DateDeleted__c )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(DateDeleted__c))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(DateDeleted__c),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateDeleted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_DateUpdated__c</fullName>
        <formula>If(NOT(ISBLANK( LastModifiedDate )),

TEXT(YEAR(DATEVALUE(LastModifiedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(LastModifiedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text(LastModifiedDate),9),8),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_DateUpdated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_ESBedType__c</fullName>
        <formula>Text( ES_Bed_Type__c )</formula>
        <label>API_ESBedType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_HouseholdType__c</fullName>
        <formula>TRIM(LEFT(TEXT(HouseholdType__c),FIND(&quot;:&quot;, TEXT(HouseholdType__c))-1))</formula>
        <label>API_HouseholdType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_InventoryEndDate__c</fullName>
        <formula>If(NOT(ISBLANK(EndDateTime)),
TEXT(YEAR(DATEVALUE( EndDateTime )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(EndDateTime))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(EndDateTime))), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_InventoryEndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_InventoryStartDate__c</fullName>
        <formula>If(NOT(ISBLANK(StartDateTime)),
TEXT(YEAR(DATEVALUE( StartDateTime )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(StartDateTime))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(StartDateTime))), 2, &quot;0&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_InventoryStartDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_OtherBedInventory__c</fullName>
        <formula>Text(OtherBedInventory__c)</formula>
        <label>API_OtherBedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_UnitInventory__c</fullName>
        <formula>TEXT(UnitInventory__c)</formula>
        <label>API_UnitInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_VetBedInventory__c</fullName>
        <formula>Text(VetBedInventory__c)</formula>
        <label>API_VetBedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_YouthBedInventory__c</fullName>
        <formula>TEXT(YouthBedInventory__c)</formula>
        <label>API_YouthBedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_YouthVetBedInventory__c</fullName>
        <formula>Text(YouthVetBedInventory__c)</formula>
        <label>API_YouthVetBedInventory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Year-round</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Seasonal</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Overflow</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BedInventory__c</fullName>
        <label>Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHBedInventory__c</fullName>
        <label>CH Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHVetBedInventory__c</fullName>
        <label>CH Vet Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHYouthBedInventory__c</fullName>
        <label>CH Youth Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CoCCode__c</fullName>
        <description>Must match a CoCCode in ProjectCoC.csv for the same ProjectID</description>
        <label>CoCCode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisContinuumOfCareCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateCreated__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE( CreatedDate )))&amp; &quot;-&quot;&amp;

LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot;-&quot; &amp;

LPAD(TEXT(DAY(DATEVALUE(CreatedDate))), 2, &quot;0&quot;)&amp; &quot; &quot;&amp;

LEFT(RIGHT(text( CreatedDate ),9),8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateCreated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateDeleted__c</fullName>
        <label>DateDeleted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ES_Bed_Type__c</fullName>
        <label>ES Bed Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Facility-based beds</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Voucher beds</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Other beds</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportID__c</fullName>
        <label>ExportID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAAmount__c</fullName>
        <label>FA Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FAEndDate__c</fullName>
        <label>FA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAStartDate__c</fullName>
        <label>FA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HouseholdType__c</fullName>
        <label>Household Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>hmisHousingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MovingOnOtherType__c</fullName>
        <label>Moving On Other Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherBedInventory__c</fullName>
        <label>Other Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherTypeProvided__c</fullName>
        <label>Other Type Provided</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicesSubTypeProvided__c</fullName>
        <label>Services Sub Type Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1: VA vocational and rehabilitation counseling</fullName>
                    <label>VA vocational and rehabilitation counseling</label>
                </value>
                <value>
                    <fullName>2 Employment and training services</fullName>
                </value>
                <value>
                    <fullName>3 Educational assistance</fullName>
                </value>
                <value>
                    <fullName>4 Health care services</fullName>
                </value>
                <value>
                    <fullName>1 Health care services</fullName>
                </value>
                <value>
                    <fullName>2 Daily living services</fullName>
                </value>
                <value>
                    <fullName>3 Personal financial planning services</fullName>
                </value>
                <value>
                    <fullName>4 Transportation services</fullName>
                </value>
                <value>
                    <fullName>5 Income support services</fullName>
                </value>
                <value>
                    <fullName>6 Fiduciary and representative payee services</fullName>
                </value>
                <value>
                    <fullName>7 Legal services - child support</fullName>
                </value>
                <value>
                    <fullName>8 Legal services - eviction prevention</fullName>
                </value>
                <value>
                    <fullName>9 Legal services - outstanding fines and penalties</fullName>
                </value>
                <value>
                    <fullName>10 Legal services - restore / acquire driver’s license</fullName>
                </value>
                <value>
                    <fullName>11 Legal services – other</fullName>
                </value>
                <value>
                    <fullName>12 Child care</fullName>
                </value>
                <value>
                    <fullName>13 Housing counseling</fullName>
                </value>
                <value>
                    <fullName>1 Personal financial planning services</fullName>
                </value>
                <value>
                    <fullName>2 Transportation services</fullName>
                </value>
                <value>
                    <fullName>3 Income support services</fullName>
                </value>
                <value>
                    <fullName>4 Fiduciary and representative payee services</fullName>
                </value>
                <value>
                    <fullName>5 Legal services - child support</fullName>
                </value>
                <value>
                    <fullName>6 Legal services - eviction prevention</fullName>
                </value>
                <value>
                    <fullName>7 Legal services - outstanding fines and penalties</fullName>
                </value>
                <value>
                    <fullName>8 Legal services - restore / acquire driver’s license</fullName>
                </value>
                <value>
                    <fullName>9 Legal services – other</fullName>
                </value>
                <value>
                    <fullName>10 Child care</fullName>
                </value>
                <value>
                    <fullName>11 Housing counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServicesTypeProvided__c</fullName>
        <description>Used to help select the Type Provided value for HMIS. Formula Field &quot;Type Provided&quot; is used to only include the value due to duplicate types within one picklist.</description>
        <label>Services Type Provided</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1: Re-engagement</fullName>
                    <label>Re-engagement</label>
                </value>
                <value>
                    <fullName>2: Screening</fullName>
                    <label>Screening</label>
                </value>
                <value>
                    <fullName>3: Habilitation/rehabilitation</fullName>
                    <label>Habilitation/rehabilitation</label>
                </value>
                <value>
                    <fullName>4: PATH Services Community mental health</fullName>
                    <label>PATH Services Community mental health</label>
                </value>
                <value>
                    <fullName>5: Substance use treatment</fullName>
                    <label>Substance use treatment</label>
                </value>
                <value>
                    <fullName>6: Case management</fullName>
                    <label>Case management</label>
                </value>
                <value>
                    <fullName>7: Residential supportive services</fullName>
                    <label>Residential supportive services</label>
                </value>
                <value>
                    <fullName>8: Housing minor renovation</fullName>
                    <label>Housing minor renovation</label>
                </value>
                <value>
                    <fullName>9: Housing moving assistance</fullName>
                    <label>Housing moving assistance</label>
                </value>
                <value>
                    <fullName>10: Housing eligibility determination</fullName>
                    <label>Housing eligibility determination</label>
                </value>
                <value>
                    <fullName>11: Security deposits</fullName>
                    <label>Path Security deposits</label>
                </value>
                <value>
                    <fullName>12: One-time rent for eviction prevention</fullName>
                    <label>One-time rent for eviction prevention</label>
                </value>
                <value>
                    <fullName>14: Clinical Assessment</fullName>
                    <label>Clinical Assessment</label>
                </value>
                <value>
                    <fullName>2: Community service/service learning (CSL)</fullName>
                    <label>Community service/service learning (CSL)</label>
                </value>
                <value>
                    <fullName>5: Education</fullName>
                    <label>Education</label>
                </value>
                <value>
                    <fullName>7: Criminal justice /legal services</fullName>
                    <label>Criminal justice /legal services</label>
                </value>
                <value>
                    <fullName>8: Life skills training</fullName>
                    <label>Life skills training</label>
                </value>
                <value>
                    <fullName>10: Parenting education for youth with children</fullName>
                    <label>Parenting education for youth with children</label>
                </value>
                <value>
                    <fullName>12: Post-natal care for client (person who gave birth)</fullName>
                    <label>Post-natal care for client (person who gave birth)</label>
                </value>
                <value>
                    <fullName>13: Pre-natal care</fullName>
                    <label>Pre-natal care</label>
                </value>
                <value>
                    <fullName>14: Health/medical care</fullName>
                    <label>Health/medical care</label>
                </value>
                <value>
                    <fullName>17: Substance use disorder treatment</fullName>
                    <label>Substance use disorder treatment</label>
                </value>
                <value>
                    <fullName>18: Substance use disorder Ed/Prevention Services</fullName>
                    <label>Substance use disorder Ed/Prevention Services</label>
                </value>
                <value>
                    <fullName>26: Home-based Services</fullName>
                    <label>Home-based Services</label>
                </value>
                <value>
                    <fullName>27: Post-natal newborn care (wellness exams; immunizations)</fullName>
                    <label>Post-natal newborn care (wellness exams; immunizations)</label>
                </value>
                <value>
                    <fullName>28: STD Testing</fullName>
                    <label>STD Testing</label>
                </value>
                <value>
                    <fullName>29: Street-based Services</fullName>
                    <label>Street-based Services</label>
                </value>
                <value>
                    <fullName>1: Adult day care and personal assistance</fullName>
                    <label>Adult day care and personal assistance</label>
                </value>
                <value>
                    <fullName>2: Case management services</fullName>
                    <label>Case management services</label>
                </value>
                <value>
                    <fullName>3: HOPWA Child care</fullName>
                    <label>HOPWA Child care</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitInventory__c</fullName>
        <label>Unit Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VetBedInventory__c</fullName>
        <label>Vet Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YouthBedInventory__c</fullName>
        <label>Youth Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YouthVetBedInventory__c</fullName>
        <label>Youth Vet Bed Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>HMIS_Inventory</fullName>
        <active>true</active>
        <description>Bed and Unit Inventory</description>
        <label>HMIS - Inventory</label>
    </recordTypes>
</CustomObject>